[metadata]
name = pointsym
version = 0.1.0
author=David Ashton
url=https://github.com/ashtondavi/point_cloud_matching
description=Python package with some point cloud similarity testing functions
long_description=open('README.md').read()

[options]
packages = find:
install_requires =
    pycpd >= 2.0.0
    numpy >= 1.23.4
    matplotlib >= 3.6.2
